# spam-email-classifier

./: .gitignore  app.py  classify.py  emails.csv  index.py  model.py  preprocess.py  train.py  traininglog.py  vectorizer.pkl
emails/spam/: j0001.txt
emails/spam/user_submit/: u0.txt
spam-model/: classify.py  setup.cfg  setup.py  spammodel.py
static/scripts/: spamPredictor.js
templates/: result.html  text-input.html
training_record/: record.csv
training_record/1/: training.csv
training_record/2/: training.csv
training_record/3/: training.csv
training_record/4/: training.csv
training_record/5/: training.csv
