[metadata]
name = Spam Model
version = 0.0.1
author = Jacob Patton
author_email = jacobpattondev@outlook.dev
description = A classification model for detecting spam emails
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
